[package]
name = "task-motel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
parking_lot = "0.12"
tokio = { version = "1.11", features = [ "full" ] }
tracing = "0.1"

[dev-dependencies]
maplit = "*"
rand = "*"
tokio = { version = "1.11", features = [ "full", "test-util" ] }
tokio-stream = { version = "0.1", features = [ "sync" ] }
